--- a/TalentBot/TalentBot.csproj
+++ b/TalentBot/TalentBot.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Discord.Net" Version="1.0.1" />
     <PackageReference Include="Discord.Net.Commands" Version="1.0.1" />
     <PackageReference Include="Discord.Net.WebSocket" Version="1.0.1" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.5.1" />
   </ItemGroup>
 
   <ItemGroup>
