--- a/TalentBot/TalentBot.csproj
+++ b/TalentBot/TalentBot.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Discord.Net.Commands" Version="1.0.2" />
     <PackageReference Include="Discord.Net.WebSocket" Version="1.0.2" />
     <PackageReference Include="HtmlAgilityPack" Version="1.6.10" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
 
   <ItemGroup>
